# Amalthea.jl

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  LICENSE  Project.toml  README.md  REVIEW.md  SUGGESTIONS.md  fix.patch  fix10.py  fix11.py  fix12.py  fix13.py  fix14.py  fix15.py  fix2.patch  fix3.patch  fix3.py  fix4.patch  fix6.py  fix7.py  fix8.py  fix9.py  fix_scans_io.patch  fix_test.jl  index.html  run_manual_tests.jl  run_test.py  temp_test_gpu_cuda.jl  temp_test_scans_io.jl
.github/: dependabot.yml
amalthea/: Cargo.toml  README.md  build.rs
amalthea/.cargo/: config.toml
amalthea/benches/: diffraction_bench.rs  dispersion_bench.rs  exp_linop_layout_bench.rs  raman_bench.rs  raman_fft_r2c_bench.rs  stepper_bench.rs
amalthea/src/: blas.rs  cubature.rs  cuda.rs  cuda_native.rs  dispatch.rs  dispersion.rs  ffi.rs  fftw.rs  integrator.rs  io.rs  ionization.rs  lib.rs  native.rs  raman.rs
amalthea/tests/: test_gpu_cuda.jl  test_julia_ffi.jl  test_scans_io.jl  test_stepper_dispatch.jl
bench/: data.js
dev/: .documenter-siteinfo.json  index.html  interface.html  objects.inv  scans.html  search_index.js
docs/: Project.toml  make.jl
examples/: custom_materials.toml
ext/: AmaltheaPyPlotExt.jl
luna-rust/: Cargo.toml  README.md  build.rs
luna-rust/.cargo/: config.toml
luna-rust/benches/: diffraction_bench.rs  dispersion_bench.rs  exp_linop_layout_bench.rs  raman_bench.rs  stepper_bench.rs
luna-rust/src/: blas.rs  cubature.rs  cuda.rs  cuda_native.rs  diffraction.rs  dispatch.rs  dispersion.rs  ffi.rs  fftw.rs  grid.rs  integrator.rs  io.rs  ionization.rs  kernels.cu  lib.rs  native.rs  raman.rs  scans.rs  spline.rs  stepper.rs
luna-rust/tests/: test_gpu_cuda.jl  test_julia_ffi.jl  test_scans_io.jl  test_stepper_dispatch.jl
python/: README.md  pyproject.toml
python/amalthea/: __init__.py  _julia.py  _kwargs.py  output.py
python/examples/: capillary_selfcompression.py  gnlse_supercontinuum.py
python/luna_rust/: __init__.py  _julia.py  _kwargs.py  output.py
python/tests/: conftest.py  test_init.py  test_integration.py  test_kwargs.py  test_output.py  test_python_api.py  test_python_api.py.orig  test_python_api.py.rej
src/: Amalthea.jl  Antiresonant.jl  Capillary.jl  Config.jl  Fields.jl  Grid.jl  Interface.jl  Ionisation.jl  LinearOps.jl  Luna.jl  Maths.jl  Modes.jl  Nonlinear.jl  (+17 more)
(+226 files in other folders)
