[package]
name = "amalthea"
version = "0.1.0"
edition = "2024"

[lib]
name = "amalthea"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
num-complex = "0.4"
rayon = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_LibraryLoader", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "diffraction_bench"
harness = false

[[bench]]
name = "raman_bench"
harness = false

[[bench]]
name = "stepper_bench"
harness = false

[[bench]]
name = "dispersion_bench"
harness = false

[[bench]]
name = "exp_linop_layout_bench"
harness = false

