[package]
name = "luna-rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "luna_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
num-complex = "0.4"
rayon = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "diffraction_bench"
harness = false

[[bench]]
name = "raman_bench"
harness = false

[[bench]]
name = "stepper_bench"
harness = false

[[bench]]
name = "dispersion_bench"
harness = false

[[bench]]
name = "qdht_new_bench"
harness = false
