[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[project]
name = "amalthea"
version = "1.0.0"
description = "Python interface to the Amalthea.jl ultrafast fibre simulation backend"
requires-python = ">= 3.9"
dependencies = [
    "juliacall >= 0.9.20",
    "juliapkg >= 0.1.10",
    "numpy >= 1.24",
    "h5py >= 3.8",
]
